k8s/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ims-backend-service
spec:
  selector:
    app: ims-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
